# Multi-Layer-Perceptron-Implementation

./: CMakeLists.txt  README.md  main.cpp
mlp/: activation_function.cpp  activation_function.h  data.cpp  data.h  layer.cpp  layer.h  loss_function.cpp  loss_function.h  matrix.cpp  matrix.h  nn.cpp  nn.h
nets/: MNIST_mlp.net
